--- a/styles/home.scss
+++ b/styles/home.scss
@@ -349,6 +349,7 @@ p {
 
       &.qr-c-2 {
         border-right: 0;
+        margin-left: 1.8rem;
       }
 
       .qr-box {
@@ -358,6 +359,10 @@ p {
         justify-content: center;
         padding: 1.5rem;
         text-align: center;
+
+        &.qr-b-1 {
+          margin-top: .9rem;
+        }
 
         > img {
           height: auto;
