LITTERPIC-296 Clickable image
 Changed both the apple and google store images to be clickable with the link to the app stores in case person is unable to scan QR codes.

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -364,7 +364,7 @@ p {
           margin-top: .9rem;
         }
 
-        > img {
+        > a img {
           height: auto;
           width: 13rem;
         }
