--- a/styles/styles.css
+++ b/styles/styles.css
@@ -845,10 +845,10 @@ p .index-inspire-change-text {
 .carousel-media {
   display: flex;
   width: auto;
-  height: 300%;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
-  object-fit: fill;
+  object-fit: contain;
 }
 
 .carousel-dots {
@@ -2162,10 +2162,10 @@ p .index-inspire-change-text {
 .carousel-media {
   display: flex;
   width: auto;
-  height: 300%;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
-  object-fit: fill;
+  object-fit: contain;
 }
 
 .carousel-dots {
