--- a/styles/styles.css
+++ b/styles/styles.css
@@ -877,6 +877,19 @@ p .index-inspire-change-text {
 }
 
 @media (max-width: 76.5rem) {
+  .ambassador-heading-text-with-icon {
+    display: flex;
+    flex-direction: row;
+    margin-right: 30%;
+  }
+  .carousel-media {
+    display: flex;
+    width: auto;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: contain;
+  }
   .index-wrapper, .ambassador-wrapper {
     column-gap: 5rem;
     display: flex;
@@ -2194,6 +2207,19 @@ p .index-inspire-change-text {
 }
 
 @media (max-width: 76.5rem) {
+  .ambassador-heading-text-with-icon {
+    display: flex;
+    flex-direction: row;
+    margin-right: 30%;
+  }
+  .carousel-media {
+    display: flex;
+    width: auto;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: contain;
+  }
   .index-wrapper, .ambassador-wrapper {
     column-gap: 5rem;
     display: flex;
@@ -3569,21 +3595,19 @@ h1.heading-text.profile-heading {
     height: 150px;
     width: 100%;
   }
-  .search-and-filter-input-button-container {
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
-  }
   .search-and-filter-input-button-container .show-all-posts-button,
   .search-and-filter-input-button-container .show-my-posts-button,
   .search-and-filter-input-button-container .post-search-button {
-    font-size: 19.2px;
+    font-size: 14px;
     height: 2rem;
     margin-left: 0.25rem;
     margin-right: 0.25rem;
     width: 100px;
   }
   .search-and-filter-input-button-container .post-search-input {
+    font-size: 10px;
     width: 135px;
+    height: 2rem;
   }
   .post-search-input {
     font-size: 19.2px;
@@ -5289,21 +5313,19 @@ input::placeholder {
     height: 150px;
     width: 100%;
   }
-  .search-and-filter-input-button-container {
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
-  }
   .search-and-filter-input-button-container .show-all-posts-button,
   .search-and-filter-input-button-container .show-my-posts-button,
   .search-and-filter-input-button-container .post-search-button {
-    font-size: 19.2px;
+    font-size: 14px;
     height: 2rem;
     margin-left: 0.25rem;
     margin-right: 0.25rem;
     width: 100px;
   }
   .search-and-filter-input-button-container .post-search-input {
+    font-size: 10px;
     width: 135px;
+    height: 2rem;
   }
   .post-search-input {
     font-size: 19.2px;
