No Jira - fix search posts by user style

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3073,6 +3073,8 @@ h1.heading-text.profile-heading {
   margin-left: 1rem;
 }
 .search-and-filter-input-button-container .post-search-input {
+  margin-left: 10px;
+  margin-top: 15px;
   border-radius: 0.5rem;
   width: 500px;
 }
@@ -4796,6 +4798,8 @@ input::placeholder {
   margin-left: 1rem;
 }
 .search-and-filter-input-button-container .post-search-input {
+  margin-left: 10px;
+  margin-top: 15px;
   border-radius: 0.5rem;
   width: 500px;
 }
