--- a/styles/home.scss
+++ b/styles/home.scss
@@ -342,16 +342,18 @@ p {
     .head-and-icon {
       display: flex;
       margin-bottom: .5rem;
+      align-items: center;
+      text-align: center;
+      gap: .5rem;
 
       .heading-text {
-        margin-top: 1.5rem;
+        margin-top: 0;
+        margin-bottom: 0;
       }
 
       img {
         width: 40px;
         height: 40px;
-        margin-top: 1.2rem;
-        margin-left: .7rem;
         border-radius: 22%;
       }
     }
@@ -378,8 +380,7 @@ p {
         height: auto;
         width: 50%;
         max-width: 11rem;
-        margin-top: 1rem;
-
+        transform: scale(.9);
       }
 
       .qr-box {
@@ -395,14 +396,16 @@ p {
           width: 100%;
           max-width: 11.5rem;
           min-width: 133px;
-          // margin: 5rem;
+          margin-top: 1rem;
+          transform: scale(.9);
+
         }
       }
     }
   }
 }
 
-@media (max-width: 42rem) {
+@media (max-width: 45.5rem) {
 
     
   .qr-group {
@@ -415,8 +418,7 @@ p {
       border-right: none !important;
 
       > img {
-        // width: 80%;
-        // transform: scale(.9);
+        min-width: 150px;
       }
 
       .qr-box p {
@@ -427,12 +429,13 @@ p {
 }
 
 @media (max-width: 793px) {
-  .qr-group .qr-container > img {
-    transform: scale(.9);
-  }
 
-  .qr-box {
-    transform: scale(.9);
+  .qr-section .qr-group .qr-container .qr-box  {
+    padding: 0 1rem;
+
+  }
+  .qr-section .app-text .head-and-icon .heading-text {
+    text-align: center;
   }
 }
 
