Community Service pictures
 Created the sass file for the community service hours file. Added the four pictures to be the same size as the pictures on the donation page with basic styling.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,6 +21,7 @@
 @import 'stories';
 @import 'verify-email';
 @import 'volunteer';
+@import 'community_service';
 
 //Font Awesome
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
