--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6019,6 +6019,18 @@ textarea.event-description-input {
     padding: 0.5rem;
   }
 }
+.image-row {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 2.5rem;
+}
+
+.image-row img {
+  width: 200px;
+  height: 275px;
+  border-radius: 10%;
+}
+
 * {
   margin: 0;
   padding: 0;
