--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,6 +23,7 @@
 @import 'verify-email';
 @import 'volunteer';
 @import 'community_service';
+@import 'notification';
 
 //Font Awesome
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
