--- a/styles/notification.scss
+++ b/styles/notification.scss
@@ -6,6 +6,14 @@
   justify-content: center;
   padding: 20px;
 
+  .no-notifications-message {
+    font-size: 1.25vw;
+    color: #757575;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+
   .highlight-notif {
     animation: wobble 1.5s ease-in-out;
     outline: 5px solid #015e41;
