--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -163,6 +163,7 @@
     height: 2.25rem;
     margin-bottom: 0;
     margin-top: 0;
+    width: 75px;
   }
 
   .logo-bar {
@@ -185,7 +186,8 @@
   .logo-bar-right-content {
     flex-direction: row;
     height: 100%;
-    margin-right: 3rem;
+    margin-right: 2rem;
+    padding-left: 30px;
   }
 
   .profile-picture {
