Updated notification mobile style

--- a/styles/notification.scss
+++ b/styles/notification.scss
@@ -80,7 +80,8 @@
           text-align: start;
           margin-left: 10px;
           margin-right: 10px;
-          flex-shrink: 0;
+          word-wrap: break-word;
+          flex-grow: 1;
         }
 
         .notification-message {
@@ -130,17 +131,17 @@
   }
 }
 
-@media (max-width: 102.25rem) and (orientation: landscape) {
+@media (max-width: 400px) {
   .notif-content {
     padding: 0 5px; /* Reduce padding for very small screens */
   }
 
   .notification-item {
-    padding: 10px; /* Reduce padding for smaller screens */
+    padding: 5px;
     border-radius: 5px;
 
     .notification-time {
-      font-size: 0.85rem;
+      font-size: 2rem;
     }
 
     .notification-message {
@@ -148,7 +149,7 @@
     }
 
     .mark-as-read-button, .delete-notification-button {
-      padding: 8px 12px; /* Further adjust padding */
+      padding: 5px 5px; /* Further adjust padding */
     }
   }
 }
