--- a/styles/notification.scss
+++ b/styles/notification.scss
@@ -46,29 +46,37 @@
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
       }
 
-      .mark-as-read-button, .delete-notification-button {
-        background-color: #015e41;
-        color: #ffffff;
-        border: none;
-        padding: 5px 10px;
-        border-radius: 5px;
+      .status-indicator {
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: $litterpic-green;
         cursor: pointer;
-        font-size: 0.8rem;
-        transition: background-color 0.3s ease;
-        margin: 0 10px;
-
-        &:hover {
-          background-color: $facebook-blue;
-        }
+        margin-right: 10px;
       }
 
-      .delete-notification-button:hover {
-        background-color: #d32f2f;
+      &.read .status-indicator {
+        background-color: #808080;
+      }
+
+      .delete-notification-button {
+        background-color: transparent;
+        color: $litterpic-green;
+        border: none;
+        padding: 5px;
+        cursor: pointer;
+        font-size: 1.2rem;
+        transition: color 0.3s ease;
+        margin-left: 10px;
+
+        &:hover {
+          color: #d32f2f;
+        }
       }
 
       .notification-content {
         display: flex;
-        flex-direction: row; /* Align content horizontally */
+        flex-direction: row;
         align-items: center;
         text-align: left;
         flex-grow: 1;
@@ -77,7 +85,7 @@
           font-size: 0.75rem;
           color: #757575;
           width: 150px;
-          text-align: start;
+          text-align: center;
           margin-left: 10px;
           margin-right: 10px;
           word-wrap: break-word;
@@ -97,13 +105,13 @@
   }
 }
 
-/* Media query for tablets and larger phones */
+
 @media (max-width: 76.5rem) {
   .notif-content {
-    max-width: 90%; /* Adjust width to fit smaller screens */
+    max-width: 90%;
 
     .notification-item {
-      flex-direction: column; /* Stack items vertically */
+      flex-direction: column;
       align-items: flex-start;
 
       .notification-content {
@@ -133,7 +141,7 @@
 
 @media (max-width: 400px) {
   .notif-content {
-    padding: 0 5px; /* Reduce padding for very small screens */
+    padding: 0 5px;
   }
 
   .notification-item {
@@ -149,7 +157,7 @@
     }
 
     .mark-as-read-button, .delete-notification-button {
-      padding: 5px 5px; /* Further adjust padding */
+      padding: 5px 5px;
     }
   }
 }
