--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6163,26 +6163,33 @@ textarea.event-description-input {
   background-color: #e0f2f1;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
-.page .notif-content .notification-item .mark-as-read-button, .page .notif-content .notification-item .delete-notification-button {
+.page .notif-content .notification-item .status-indicator {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
   background-color: #015e41;
-  color: #ffffff;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
   cursor: pointer;
-  font-size: 0.8rem;
-  transition: background-color 0.3s ease;
-  margin: 0 10px;
+  margin-right: 10px;
 }
-.page .notif-content .notification-item .mark-as-read-button:hover, .page .notif-content .notification-item .delete-notification-button:hover {
-  background-color: #4267b2;
+.page .notif-content .notification-item.read .status-indicator {
+  background-color: #808080;
+}
+.page .notif-content .notification-item .delete-notification-button {
+  background-color: transparent;
+  color: #015e41;
+  border: none;
+  padding: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: color 0.3s ease;
+  margin-left: 10px;
 }
 .page .notif-content .notification-item .delete-notification-button:hover {
-  background-color: #d32f2f;
+  color: #d32f2f;
 }
 .page .notif-content .notification-item .notification-content {
   display: flex;
-  flex-direction: row; /* Align content horizontally */
+  flex-direction: row;
   align-items: center;
   text-align: left;
   flex-grow: 1;
@@ -6191,7 +6198,7 @@ textarea.event-description-input {
   font-size: 0.75rem;
   color: #757575;
   width: 150px;
-  text-align: start;
+  text-align: center;
   margin-left: 10px;
   margin-right: 10px;
   word-wrap: break-word;
@@ -6206,13 +6213,12 @@ textarea.event-description-input {
   flex-grow: 1;
 }
 
-/* Media query for tablets and larger phones */
 @media (max-width: 76.5rem) {
   .notif-content {
-    max-width: 90%; /* Adjust width to fit smaller screens */
+    max-width: 90%;
   }
   .notif-content .notification-item {
-    flex-direction: column; /* Stack items vertically */
+    flex-direction: column;
     align-items: flex-start;
   }
   .notif-content .notification-item .notification-content {
@@ -6235,7 +6241,7 @@ textarea.event-description-input {
 }
 @media (max-width: 400px) {
   .notif-content {
-    padding: 0 5px; /* Reduce padding for very small screens */
+    padding: 0 5px;
   }
   .notification-item {
     padding: 5px;
@@ -6248,7 +6254,7 @@ textarea.event-description-input {
     font-size: 1rem;
   }
   .notification-item .mark-as-read-button, .notification-item .delete-notification-button {
-    padding: 5px 5px; /* Further adjust padding */
+    padding: 5px 5px;
   }
 }
 * {
