LITTERPIC-326 Replaced 4 pictures in community service page with the 1 image

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6107,14 +6107,12 @@ textarea.event-description-input {
 .image-row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   margin-bottom: 2.5rem;
 }
 .image-row img {
-  border-radius: 10%;
-  height: 17.2rem;
   margin: 0.5rem;
-  width: 12.5rem;
+  width: 60.5rem;
 }
 @media (max-width: 600px) {
   .image-row img {
