--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -286,6 +286,47 @@
   grid-column: 3;
   grid-row: 2;
   justify-content: flex-end;
+  margin-right: 10px;
+}
+
+a.post-user-name {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.follow-button {
+  grid-column: 1 / span 2;
+  grid-row: 3;
+  background-color: $litterpic-green;
+  border: 0;
+  color: $white;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+  font-family: Poppins, sans-serif;
+  font-size: .75rem;
+  font-weight: lighter;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  width: auto;
+  padding: 0.15rem 0.3rem;
+  text-align: center;
+  text-decoration: none;
+  z-index: 1000;
+  justify-self: start;
+}
+
+.follow-button.following {
+  background-color: transparent;
+  color: $litterpic-green;
+  font-style: italic;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.follow-button.following:hover {
+  color: red;
+  background-color: yellow;
 }
 
 .profile-image {
@@ -309,8 +350,10 @@
   font-weight: normal;
   justify-content: flex-start;
   flex-direction: row;
-  grid-column: 2;
+  grid-column: 2/span 3;
   grid-row: 2;
+
+  margin-bottom: 5px;
 
   &-text {
     font-size: .7rem;
@@ -338,6 +381,7 @@
   display: flex;
   font-size: .75rem;
   justify-content: flex-end;
+  margin-right: 10px;
   grid-column: 3;
   grid-row: 1;
 
