--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3382,6 +3382,47 @@ h1.heading-text.profile-heading {
   grid-column: 3;
   grid-row: 2;
   justify-content: flex-end;
+  margin-right: 10px;
+}
+
+a.post-user-name {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.follow-button {
+  grid-column: 1/span 2;
+  grid-row: 3;
+  background-color: #015e41;
+  border: 0;
+  color: #fff;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-family: Poppins, sans-serif;
+  font-size: 0.75rem;
+  font-weight: lighter;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  width: auto;
+  padding: 0.15rem 0.3rem;
+  text-align: center;
+  text-decoration: none;
+  z-index: 1000;
+  justify-self: start;
+}
+
+.follow-button.following {
+  background-color: transparent;
+  color: #015e41;
+  font-style: italic;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.follow-button.following:hover {
+  color: red;
+  background-color: yellow;
 }
 
 .profile-image {
@@ -3404,8 +3445,9 @@ h1.heading-text.profile-heading {
   font-weight: normal;
   justify-content: flex-start;
   flex-direction: row;
-  grid-column: 2;
+  grid-column: 2/span 3;
   grid-row: 2;
+  margin-bottom: 5px;
 }
 .post-ambassador-text {
   font-size: 0.7rem;
@@ -3431,6 +3473,7 @@ h1.heading-text.profile-heading {
   display: flex;
   font-size: 0.75rem;
   justify-content: flex-end;
+  margin-right: 10px;
   grid-column: 3;
   grid-row: 1;
 }
@@ -5107,6 +5150,47 @@ input::placeholder {
   grid-column: 3;
   grid-row: 2;
   justify-content: flex-end;
+  margin-right: 10px;
+}
+
+a.post-user-name {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.follow-button {
+  grid-column: 1/span 2;
+  grid-row: 3;
+  background-color: #015e41;
+  border: 0;
+  color: #fff;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-family: Poppins, sans-serif;
+  font-size: 0.75rem;
+  font-weight: lighter;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  width: auto;
+  padding: 0.15rem 0.3rem;
+  text-align: center;
+  text-decoration: none;
+  z-index: 1000;
+  justify-self: start;
+}
+
+.follow-button.following {
+  background-color: transparent;
+  color: #015e41;
+  font-style: italic;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.follow-button.following:hover {
+  color: red;
+  background-color: yellow;
 }
 
 .profile-image {
@@ -5129,8 +5213,9 @@ input::placeholder {
   font-weight: normal;
   justify-content: flex-start;
   flex-direction: row;
-  grid-column: 2;
+  grid-column: 2/span 3;
   grid-row: 2;
+  margin-bottom: 5px;
 }
 .post-ambassador-text {
   font-size: 0.7rem;
@@ -5156,6 +5241,7 @@ input::placeholder {
   display: flex;
   font-size: 0.75rem;
   justify-content: flex-end;
+  margin-right: 10px;
   grid-column: 3;
   grid-row: 1;
 }
